# ct_string

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/ct_str/: ct_string_view.hpp  fixed_string.hpp
test_console_app/: header_only_views.hpp  impl_views.cpp  impl_views.hpp  main.cpp
tests/: cstr_view_tests.cpp
